create friends.html & css add

--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -14,7 +14,7 @@
 
 .nav__link {
   position: relative;
-  color: #2e373e;
+  /* color: #2e373e; */
 }
 .nav__notification {
   background-color: tomato;
