--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -1,15 +1,13 @@
 .screen-header {
   display: flex;
-
-  /* to verifier */
+  /* to verifier position:fixed or not*/
+  /*
   position: fixed;
   width: 100%;
-  /*  */
-
+   */
   justify-content: space-between;
   align-items: center;
-  padding: 20px;
-  padding-top: 40px;
+  padding: var(--horizontal-space);
 }
 
 .screen-header__title {
