--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -1,6 +1,7 @@
 .status-bar {
-  position: fixed;
+  /* position: fixed;
   top: 0px;
+  width: 100%; */
   width: 100%;
   display: flex;
   justify-content: center;
