--- a/css/style.css
+++ b/css/style.css
@@ -5,15 +5,16 @@
 @import "components/status-bar.css";
 @import "components/nav-bar.css";
 @import "components/screen-header.css";
-
-/* Screens */
+@import "components/user-component.css"; /* Screens */
 @import "screens/login.css";
+@import "screens/friends.css";
 
 * {
   box-sizing: border-box;
 }
 body {
+  color: #2e373e;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  height: 1000vh;
+  /* height: 1000vh; */
 }
