--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -1,6 +1,5 @@
 .user-component {
   justify-content: space-between;
-  margin: 10px 0px;
 }
 .user-component,
 .user-component__column:first-child {
@@ -38,13 +37,6 @@
   font-weight: 400;
 }
 
-.user-component__column--book {
-  border: 1px solid var(--green);
-  display: block;
-  padding: 5px 10px;
-  max-width: 200px;
-  border-radius: 50px;
-}
-.user-component__column--book :last-child {
-  color: var(--green);
+.user-component__column:last-child {
+  color: rgba(0, 0, 0, 0.5);
 }
