--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -17,13 +17,13 @@
   padding: 0px var(--horizontal-space);
 }
 
-.friends-screen__favoris {
+.friends-screen__channel {
   margin-top: 25px;
   border-top: 1px solid rgba(0, 0, 0, 0.2);
   padding-top: 15px;
 }
 
-.friends-screen__favoris-header {
+.friends-screen__channel-header {
   margin-bottom: 30px;
   display: flex;
   justify-content: space-between;
