--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -1,11 +1,10 @@
 .status-bar {
-  /* position: fixed;
-  top: 0px;
-  width: 100%; */
+  position: fixed;
   width: 100%;
   display: flex;
   justify-content: center;
   padding: 5px 3px;
+  z-index: 1;
 }
 .status-bar__column {
   width: 33%;
