--- a/css/screens/login.css
+++ b/css/screens/login.css
@@ -33,7 +33,7 @@
 }
 
 #login-form input::placeholder {
-  color: rgba(0, 0, 0, 0.4);
+  color: var(--main-font-color);
 }
 
 #login-form input:focus {
