--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,19 @@
 @import "components/status-bar.css";
 @import "components/nav-bar.css";
 @import "components/screen-header.css";
-@import "components/user-component.css"; /* Screens */
+@import "components/alt-screen-header.css";
+@import "components/user-component.css";
+@import "components/badge.css";
+@import "components/icon-row.css";
+@import "components/main-screen.css";
+
+/* Screens */
 @import "screens/login.css";
 @import "screens/friends.css";
-
+@import "screens/find.css";
+@import "screens/more.css";
+@import "screens/settings.css";
+@import "screens/chat.css";
 * {
   box-sizing: border-box;
 }
@@ -16,5 +25,17 @@ body {
   color: #2e373e;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  /* height: 1000vh; */
+}
+.status-bar {
+  z-index: 2;
+}
+header {
+  z-index: 1;
+}
+
+.dot {
+  background-color: tomato;
+  width: 5px;
+  height: 5px;
+  border-radius: 2.5px;
 }
