--- a/css/variable.css
+++ b/css/variable.css
@@ -2,4 +2,6 @@
   --yellow: #fae100;
   --green: #05cd3e;
   --horizontal-space: 25px;
+  --main-border: 1px solid rgba(0, 0, 0, 0.2);
+  --main-font-color: rgba(0, 0, 0, 0.4);
 }
