--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
 @import "components/badge.css";
 @import "components/icon-row.css";
 @import "components/main-screen.css";
+@import "components/no-mobile.css";
 
 /* Screens */
 @import "screens/login.css";
