--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -104,17 +104,35 @@
     opacity: 1;
   }
 }
+@keyframes fadeInDown {
+  0% {
+    transform: translateY(500px);
+    opacity: 0;
+  }
+  50% {
+    transform: none;
+    opacity: 1;
+  }
+  100% {
+    transform: scale(5);
+  }
+}
 
 .message-row--own {
-  animation: fadeInRight 0.5s linear forwards;
+  animation: fadeInRight 1s linear forwards;
 }
 
 #_2 {
-  animation: fadeInLeft 0.5s linear forwards;
+  animation: fadeInLeft 1s linear forwards;
   animation-delay: 1s;
 }
 #_3 {
   animation-delay: 2s;
+}
+#_4 {
+  opacity: 0;
+  animation: fadeInDown 2s linear infinite;
+  animation-delay: 3s;
 }
 
 .reply {
