--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -8,6 +8,7 @@
 .recommended-friends__title {
   font-size: 14px;
   color: var(--main-font-color);
+  margin-bottom: 20px;
 }
 
 .recommended-friends span {
