--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -62,17 +62,24 @@
   animation: hideSplashScreen 0.4s ease-in-out forwards;
   animation-delay: 2s;
 }
-#splash-screen .splash-screen__img {
-  width: 50vw;
-  opacity: 0.8;
-  border-radius: 50%;
+
+#splash-screen i {
+  color: #3b1e1e;
 }
-#splash-screen .philos-talk {
+#splash-screen .splash-screen__img {
+  position: absolute;
+  width: 50vw;
+  opacity: 0.7;
+  border-radius: 100%;
+}
+/* #splash-screen .philos-talk {
   position: absolute;
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  color: var(--main-font-color);
+  color: var(--yellow);
+  padding: 30px;
   font-size: 32px;
-}
+  border-radius: 60px;
+} */
