--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@
 @import "screens/more.css";
 @import "screens/settings.css";
 @import "screens/chat.css";
+@import "screens/chats.css";
 * {
   box-sizing: border-box;
 }
