--- a/css/screens/login.css
+++ b/css/screens/login.css
@@ -34,6 +34,7 @@
 
 #login-form input::placeholder {
   color: var(--main-font-color);
+  font-family: "Philosopher", sans-serif;
 }
 
 #login-form input:focus {
@@ -42,6 +43,8 @@
 
 #login-form input[type="submit"] {
   background-color: var(--yellow);
+  font-family: "Philosopher", sans-serif;
+  color: rgb(255, 255, 255);
   cursor: pointer;
   padding: 20px 0px;
   border-radius: 5px;
