--- a/css/components/no-mobile.css
+++ b/css/components/no-mobile.css
@@ -5,6 +5,7 @@
   width: 100vw;
   background-color: rgba(0, 0, 0, 0.9);
   display: flex;
+  flex-direction: column;
   top: 0;
   left: 0;
   right: 0;
@@ -15,7 +16,11 @@
   color: white;
 }
 
-@media screen and (max-width: 645px) {
+#no-mobile div {
+  margin-bottom: 50px;
+}
+
+@media screen and (max-width: 600px) {
   #no-mobile {
     display: none;
   }
