--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -1,11 +1,11 @@
 #chat-screen {
-  background-color: #abc1d1;
+  background-color: var(--silver);
   height: 500vh;
 }
 
 #chat-screen .status-bar,
 #chat-screen .alt-header {
-  background-color: #abc1d1;
+  background-color: var(--silver);
 }
 
 .main-chat {
@@ -65,6 +65,7 @@
 }
 .message-row--own .message__bubble {
   background-color: var(--yellow);
+  color: white;
   border-radius: 15px;
   border-top-right-radius: 0px;
   margin-right: 0px;
@@ -157,6 +158,9 @@
 
 .reply i :not(button i) {
   opacity: 0.5;
+}
+.reply button i {
+  color: white;
 }
 
 .reply input {
