--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
 @import "reset.css";
 @import "variable.css";
 
+/* font */
+@import url("https://fonts.googleapis.com/css2?family=Hanalei+Fill&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Medula+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Philosopher:ital,wght@0,400;0,700;1,400&display=swap");
 /* Components */
 @import "components/status-bar.css";
 @import "components/nav-bar.css";
@@ -25,10 +29,14 @@
 }
 body {
   color: #2e373e;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Philosopher", sans-serif;
+
+  /* vintage:EUREKA
+  font-family: "Hanalei Fill", cursive; */
 }
 .status-bar {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   z-index: 2;
 }
 header {
