--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -107,7 +107,7 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  color: var(--yellow);
+  color: var(--baseColor);
   padding: 30px;
   font-size: 32px;
   border-radius: 60px;
