--- a/css/screens/login.css
+++ b/css/screens/login.css
@@ -38,11 +38,11 @@
 }
 
 #login-form input:focus {
-  border-color: var(--yellow);
+  border-color: var(--baseColor);
 }
 
 #login-form input[type="submit"] {
-  background-color: var(--yellow);
+  background-color: var(--baseColor);
   font-family: "Philosopher", sans-serif;
   color: rgb(255, 255, 255);
   cursor: pointer;
